kubernetes/frontend/ingress/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: dev-project
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: app.test
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: frontend-clusterip
                port:
                  number: 80
          - path: "/api"
            pathType: Prefix
            backend:
              service:
                name: backend-clusterip
                port:
                  number: 8085
          - path: "/metrics"
            pathType: Prefix
            backend:
              service:
                name: backend-clusterip
                port:
                  number: 8085
